--- a/app/src/main/res/layout/schedule_edit_item_layout.xml
+++ b/app/src/main/res/layout/schedule_edit_item_layout.xml
@@ -80,7 +80,7 @@
             android:padding="2dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Skapa" />
+            android:text="Spara" />
 
     </LinearLayout>
 
