--- a/app/src/main/res/layout/economy_layout.xml
+++ b/app/src/main/res/layout/economy_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:text="Economy Layout"
+        android:text="Tillgänglig i version 2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
