--- a/app/src/main/res/layout/schedule_edit_item_layout.xml
+++ b/app/src/main/res/layout/schedule_edit_item_layout.xml
@@ -12,6 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/schedule_edit_date"
+        android:textStyle="bold"
+        android:text="Datum"
+        android:textSize="20dp"
+        android:padding="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <EditText
         android:id="@+id/schedule_edit_name"
         android:padding="20dp"
