--- a/app/src/main/res/layout/schedule_customnew_item_layout.xml
+++ b/app/src/main/res/layout/schedule_customnew_item_layout.xml
@@ -19,10 +19,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+
     <EditText
         android:id="@+id/schedule_newcustom_tel"
         android:padding="20dp"
         android:hint="Telefonnummer"
+        android:inputType="phone"
+        android:ems="10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
