--- a/app/src/main/res/layout/schedule_edit_item_layout.xml
+++ b/app/src/main/res/layout/schedule_edit_item_layout.xml
@@ -32,6 +32,8 @@
         android:id="@+id/schedule_edit_tel"
         android:padding="20dp"
         android:hint="Telefonnummer"
+        android:inputType="phone"
+        android:ems="10"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -49,12 +51,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <EditText
+    <TextView
         android:id="@+id/schedule_edit_duration"
-        android:padding="20dp"
-        android:hint="Antal timmar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="timmar"
+        android:textSize="20dp"
+        android:padding="20dp" />
+
 
     <LinearLayout
         android:layout_width="match_parent"
