Back button works better now. Also fixed somethings i think

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#d97a1a</color>
     <color name="colorAccent">#FF4081</color>
     <color name="pictureBackground">#4e4e4e</color>
+    <color name="backgroundColor">#fff7bc</color>
 </resources>
