--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -3,22 +3,29 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroundColor">>
+    android:background="@color/backgroundColor">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_height="0dp"
         android:layout_weight="50"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/if_empty_list_textview"
+            android:layout_centerInParent="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
         <ListView
             android:layout_width="match_parent"
-            android:layout_height="240sp"
+            android:layout_height="match_parent"
             android:id="@+id/next_appointment_list"
             android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
-    </LinearLayout>
+
+
+    </RelativeLayout>
 
     <LinearLayout
         android:background="@drawable/border"
