--- a/app/src/main/res/layout/schedule_layout.xml
+++ b/app/src/main/res/layout/schedule_layout.xml
@@ -86,6 +86,7 @@ android:layout_height="match_parent"
         android:id="@+id/titlef"
         android:layout_width="match_parent"
         android:layout_height="12dp"
+        android:textSize="10dp"
         android:layout_weight="1"
         android:text="M"
         />
@@ -175,13 +176,16 @@ android:layout_height="match_parent"
     android:layout_weight="16"
     android:layout_height="match_parent"
     android:orientation="vertical">
+
     <TextView
         android:id="@+id/titleb"
         android:layout_width="match_parent"
         android:layout_height="12dp"
         android:layout_weight="1"
         android:text="Ti"
+        android:textSize="10dp"
         />
+
     <TextView
         android:background="@drawable/back"
         android:id="@+id/testctext1"
@@ -272,6 +276,7 @@ android:layout_height="match_parent"
         android:layout_height="12dp"
         android:layout_weight="1"
         android:text="O"
+        android:textSize="10dp"
         />
     <TextView
         android:background="@drawable/back"
@@ -364,6 +369,7 @@ android:layout_height="match_parent"
         android:layout_height="12dp"
         android:layout_weight="1"
         android:text="To"
+        android:textSize="10dp"
         />
     <TextView
         android:background="@drawable/back"
@@ -456,6 +462,7 @@ android:layout_height="match_parent"
         android:layout_height="12dp"
         android:layout_weight="1"
         android:text="F"
+        android:textSize="10dp"
         />
     <TextView
         android:background="@drawable/back"
