--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     android:background="@color/backgroundColor">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Dagens ärenden" />
+
     <RelativeLayout
         android:layout_height="0dp"
         android:layout_weight="50"
@@ -41,13 +46,12 @@
         android:id="@+id/selected_layout">
 
         <TextView
-            android:text="Tid"
+            android:text="Beskrivning"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/selected_time"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="16dp" />
+            android:id="@+id/selected_desc"
+            android:layout_below="@+id/selected_cust"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:text="Kund Namn"
@@ -55,15 +59,23 @@
             android:layout_height="wrap_content"
             android:textSize="22sp"
             android:id="@+id/selected_cust"
-            android:layout_alignTop="@+id/selected_time"
+            android:layout_below="@+id/textView3"
             android:layout_alignParentStart="true" />
 
         <TextView
-            android:text="Beskrivning"
+            android:text="Tid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/selected_desc"
-            android:layout_below="@+id/selected_cust"
+            android:id="@+id/selected_time"
+            android:layout_alignTop="@+id/selected_cust"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:text="Valt ärende"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3"
+            android:layout_alignParentTop="true"
             android:layout_alignParentStart="true" />
 
     </RelativeLayout>
