--- a/app/src/main/res/layout/edit_gallery_item_layout.xml
+++ b/app/src/main/res/layout/edit_gallery_item_layout.xml
@@ -107,7 +107,7 @@
 
             <TextView
                 android:textStyle="bold"
-                android:text="Nuvarande Ägare"
+                android:text="Tillverkare"
                 android:textSize="20dp"
                 android:padding="20dp"
                 android:layout_width="match_parent"
