--- a/app/src/main/res/layout/item_next_appointment.xml
+++ b/app/src/main/res/layout/item_next_appointment.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@color/backgroundColor">
+    android:background="@color/backgroundColor"
+    android:padding="10dp">
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:textSize="22sp"
+        android:textSize="22dp"
         android:id="@+id/listitem_custname" />
 
     <TextView
+        android:textSize="20dp"
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/listitem_time"
-        android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true" />
 
     <TextView
@@ -26,6 +26,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/listitem_custname"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
+        android:layout_centerInParent="true"
         android:id="@+id/listitem_desc" />
 </RelativeLayout>
